tests/snapshots/output_format__render_scrollbar_at_bottom.snap
---
source: tests/output_format.rs
expression: "render_app(&mut app, 60, 20)"
---
"││   21       let key = hash(input);                       ▲"
"││   22       if let Some(val) = store.get(key) {          ║"
"││   23           return val;                              ║"
"│└   24   }                                                ║"
"└──────────────────────────────────────────────────────────║"
"┌ [ ] ▼ app/plugins/network/client.rs  M  +1 -0 ───────────║"
"│┌ [ ] +1 -0  @@ -30,5 +30,6 @@                            ║"
"││   30   fn connect() {                                   ║"
"││   31 +     set_timeout(30);                             ║"
"││   31       let addr = resolve(host);                    ║"
"││   32       let sock = open(addr);                       ║"
"││   33       handshake(sock);                             ║"
"│└   34   }                                                ║"
"└──────────────────────────────────────────────────────────║"
"┌ [ ] ▼ app/plugins/logging/output.rs  M  +1 -0 ───────────║"
"│┌ [ ] +1 -0  @@ -40,5 +40,6 @@                            █"
"││   40   fn write_log() {                                 █"
"││   41 +     rotate_if_needed();                          █"
"││   41       let msg = format_entry();                    ▼"
" 0/5 files confirmed                                        "
