tests/snapshots/output_format__render_wrapped_long_line.snap
---
source: tests/output_format.rs
expression: "render_app(&mut app, 60, 12)"
---
"┌ [ ] ▼ src/wide.rs  M  +1 -0 ─────────────────────────────┐"
"│┌ [ ] +1 -0  @@ -1,2 +1,3 @@                              │"
"││    1   fn short() {}                                    │"
"││    2 +     let result =                                 │"
"││        compute_everything(first_argument,               │"
"││        second_argument, third_argument);                │"
"│└    2   fn tail() {}                                     │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
"                                                            "
"                                                            "
" 0/1 files confirmed                                        "
