tests/snapshots/output_format__scrollbar_bottom_at_last_hunk.snap
---
source: tests/output_format.rs
expression: "format!(\"{label}: pos={pos} max={max}\")"
---
[hunk app/plugins/logging/output.rs.0]: pos=16 max=16
