tests/snapshots/output_format__single_child_folders_merge.snap
---
source: tests/output_format.rs
expression: folder_items(&app)
---
[
    (
        "src/app/components",
        0,
    ),
]
