tests/snapshots/output_format__single_hunk_confirmed.snap
---
source: tests/output_format.rs
expression: format_confirmed_diff(&files)
---
diff --git a/src/foo.rs b/src/foo.rs
--- a/src/foo.rs
+++ b/src/foo.rs
@@ -1,3 +1,4 @@
 line1
+added
 line2
 line3
